--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my_cv",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://adnaoui.github.io/my_cv",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
